--- a/includes/index.css
+++ b/includes/index.css
@@ -1,6 +1,6 @@
 @font-face { font-family: 'bpreplay'; font-weight: normal; font-style: normal; src: url('BPreplay-webfont.eot'); src: local('☺'), url('BPreplay-webfont.woff') format('woff'), url('BPreplay-webfont.ttf') format('truetype'), url('BPreplay-webfont.svg#webfontgzJ8Cr4g') format('svg'); }
 
-body { width: 90%; margin: 40px auto; font-family: sans-serif; background: #f6f6f0; color: #330; line-height: 1.5; }
+body { width: 90%; margin: 0 auto; font-family: sans-serif; background: #0B0B0A; color: whitesmoke; line-height: 1.5; }
 header { display: block; background: url('./divider.png') bottom center no-repeat; padding: 10px 0px; margin: 0px 0px 20px; text-align: center; }
 h1 { display: inline; position: relative; margin: 0ex 0ex 1ex 1.2ex; font-family: 'bpreplay', sans-serif; font-weight: normal; font-size: 42px; letter-spacing: 1px; }
 h1:before { content: '♬ '; position: absolute; top: 16px; left: -3.1ex; color: #da1c5c; font-size: 0.4em; }
@@ -20,21 +20,21 @@ h3 { margin: 30px 0px 8px; }
 
 p { font-size: 13px; margin: 0px 0px 5px; padding: 0px 0px 1px; }
 em { font-style: normal; color: #b1aca0; padding-right: 3px; }
-a { color: #330; text-decoration: none; border-bottom: 1px solid; }
+a { color: whitesmoke; text-decoration: none; border-bottom: 1px solid; }
 blockquote { font-size: 13px; font-style: italic; border-left: 2px solid #b1aca0; padding: 0px 0px 2px 10px; margin: 0px 0px 10px; }
 cite:before { content: "From:\00a0"; }
 cite { border-top: 1px dotted #999; padding-top: 0.5em; display: block; word-wrap: break-word; }
 
 ol { padding: 0px; font-size: 12px; color: #b1aca0; }
 ol li { margin: 0px 0px 20px; }
-ol li p { color: #330; }
+ol li p { color: whitesmoke; }
 
 ul { font-size: 13px; margin: 6px 0px; padding: 0px; list-style: none; }
 ul li { position: relative; }
 ul li:before { content: '\2022'; position: absolute; left: -1.8ex; }
 
 pre,
-code { background: #EFEEE6; color: #552; font-family: Monaco, Consolas, 'Lucida Console', monospace; font-size: 12px; padding: 0px 3px; }
+code { background: #EFEEE6; color: whitesmoke; font-family: Monaco, Consolas, 'Lucida Console', monospace; font-size: 12px; padding: 0px 3px; }
 pre { margin: 0px; padding: 4px 8px; }
 
 footer { display: block; margin: 30px 0px 0px; color: #b1aca0; text-align: center; margin: 50px 0px 0px; }
@@ -42,3 +42,9 @@ footer a { color: #b1aca0; }
 footer em { display: block; font-size: 1.2em; font-style: normal; }
 footer .ab-c { font-family: 'Andale Mono', 'Courier New', courier; font-size: 0.75em; margin: 30px 0px 0px; padding: 20px 0px; border-top: 1px solid #EFEEE6; }
 footer .ab-c a { padding: 0px; }
+
+#list:hover{cursor: pointer;}
+
+#list{ position: absolute; margin-top: -14%; margin-left: 90%; display: none; }
+
+#album{ position: absolute; display: none; width: 44%; height:  88%; margin-left: 23%;  margin-top: -12%; z-index: -100; opacity:0.4;}
