--- a/includes/index.css
+++ b/includes/index.css
@@ -1,55 +1,124 @@
 @font-face { font-family: 'bpreplay'; font-weight: normal; font-style: normal; src: url('BPreplay-webfont.eot'); src: local('☺'), url('BPreplay-webfont.woff') format('woff'), url('BPreplay-webfont.ttf') format('truetype'), url('BPreplay-webfont.svg#webfontgzJ8Cr4g') format('svg'); }
 
-body { width: 90%; margin: 0 auto; font-family: sans-serif; background: #0B0B0A; color: whitesmoke; line-height: 1.5; }
-header { display: block; background: url('./divider.png') bottom center no-repeat; padding: 10px 0px; margin: 0px 0px 20px; text-align: center; }
-h1 { display: inline; position: relative; margin: 0ex 0ex 1ex 1.2ex; font-family: 'bpreplay', sans-serif; font-weight: normal; font-size: 42px; letter-spacing: 1px; }
-h1:before { content: '♬ '; position: absolute; top: 16px; left: -3.1ex; color: #da1c5c; font-size: 0.4em; }
+@import "http://fonts.googleapis.com/css?family=Lato";
 
-.audiojs { margin: 0 auto; margin-top: 4%;}
-h2 { font-family: 'bpreplay', sans-serif; font-weight: normal; font-size: 24px; margin-bottom: 10px; line-height: 1.6; }
+body { width: 100%; margin: 0 auto; font-family:'Lato',sans-serif; background: #0B0B0A; color: whitesmoke; line-height: 1.3; }
 
-.download { background: url('./divider.png') top center no-repeat, url('./divider.png') bottom center no-repeat; margin: 30px 0px; padding: 20px 0px; text-align: center; }
-.download a em { color: rgba(255, 255, 255, 0.8); font-style: normal; }
-.download a em:before { content: '⬇ '; font-size: 0.8em; padding: 0px 4px 0px 0px; }
-.download a { display: block; color: #f6f6f0; width: 190px; margin: 5px auto; padding: 8px 2px 8px 0px; font-size: 14px; border-bottom: 0px; background: #da1c5c;
-  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -o-border-radius: 5px;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.2, #da1c5c), color-stop(0.5, #C81C5C), color-stop(0.51, #da1c5c), color-stop(1, #da1c5c));
-  background-image: -moz-linear-gradient(center top, #da1c5c 0%, #C81C5C 50%, #da1c5c 51%, #da1c5c 100%); }
-  
-h3 { margin: 30px 0px 8px; }
-
-p { font-size: 13px; margin: 0px 0px 5px; padding: 0px 0px 1px; }
-em { font-style: normal; color: #b1aca0; padding-right: 3px; }
-a { color: whitesmoke; text-decoration: none; border-bottom: 1px solid; }
-blockquote { font-size: 13px; font-style: italic; border-left: 2px solid #b1aca0; padding: 0px 0px 2px 10px; margin: 0px 0px 10px; }
-cite:before { content: "From:\00a0"; }
-cite { border-top: 1px dotted #999; padding-top: 0.5em; display: block; word-wrap: break-word; }
-
-ol { padding: 0px; font-size: 12px; color: #b1aca0; }
-ol li { margin: 0px 0px 20px; }
-ol li p { color: whitesmoke; }
-
-ul { font-size: 13px; margin: 6px 0px; padding: 0px; list-style: none; }
-ul li { position: relative; }
-ul li:before { content: '\2022'; position: absolute; left: -1.8ex; }
-
-pre,
-code { background: #EFEEE6; color: whitesmoke; font-family: Monaco, Consolas, 'Lucida Console', monospace; font-size: 12px; padding: 0px 3px; }
-pre { margin: 0px; padding: 4px 8px; }
-
-footer { display: block; margin: 30px 0px 0px; color: #b1aca0; text-align: center; margin: 50px 0px 0px; }
-footer a { color: #b1aca0; }
-footer em { display: block; font-size: 1.2em; font-style: normal; }
-footer .ab-c { font-family: 'Andale Mono', 'Courier New', courier; font-size: 0.75em; margin: 30px 0px 0px; padding: 20px 0px; border-top: 1px solid #EFEEE6; }
-footer .ab-c a { padding: 0px; }
+.audiojs { float: left;}
 
 #list:hover{cursor: pointer;}
 
 #list{ position: absolute; margin-top: -14%; margin-left: 90%; display: none; }
 
-#album{ position: absolute; display: none; width: 44%; height:  88%; margin-left: 23%;  margin-top: -12%; z-index: -100; opacity:0.4;}
+#album-mini{ display: none; width: 110px; height:  110px; float: left;}
 
 #input{ width: 98%; }
-#name{text-shadow: 6px 6px 0px rgba(0,0,0,0.2); text-align: center; font-size: 35px; margin-top: 15%; cursor: pointer; border-bottom: none;}
+.name_notfloat{border-bottom: none;}
+.name{border-bottom: none;}
 
-#name_div{text-align: center; font-size: 35px; margin-top: 15%;}
+.name_div_notfloat{font-size: 20px;margin-left: 1%; color: #bbc1ba; font-family: 'Lato', sans-serif, '300italic';}
+.name_div{font-size: 30px; margin-left: 1%; color:white; font-family: 'Lato', sans-serif, 700;}
+
+#mini-panel{
+    width: 98%;
+    position: absolute;
+    margin-top: 35.5%;
+    margin-left: -50%;
+}
+.info_panel{
+    margin-top: 0.5%;
+    margin-left: 0.6%;
+    width: 700px;
+    float: left;
+}
+#line-panel{
+    position: absolute;
+    margin-top: 42%;
+    width: 98%;
+}
+
+
+
+
+
+.outer {
+    width:90%;
+    position:absolute;
+    margin-top:11%;
+    margin-left:30%
+}
+
+.outer > #panel {
+    display:flex;
+    position:fixed;
+    width:auto;
+    height:170px;
+    font-size:32px
+}
+
+.column {
+    flex-direction:column;
+    float:right;
+    position:absolute;
+    margin:auto;
+    top:0;
+    bottom:0;
+    padding-left:15px;
+    white-space:nowrap
+}
+
+#cover {
+    width:240px;
+    height:240px;
+    background-image:url(http://upload.wikimedia.org/wikipedia/en/c/ce/Riseagainstendgame.jpg);
+    background-size:100%;
+    flex-direction:column
+}
+
+#track {
+    font-size:54px;
+    font-weight:700;
+    padding:0 0 0 7px;
+    color:white;
+    font-family: 'Lato', sans-serif, '300italic';
+}
+
+#album {
+    padding-top:-2px;
+    padding-bottom:2px;
+    padding-left:7px;
+    color: #bbc1ba;
+    font-family: 'Lato', sans-serif, '300italic';
+}
+
+#artist {
+    padding:2px 2px 0 7px;
+    margin-top:-2px;
+    color: #bbc1ba;
+    font-family: 'Lato', sans-serif, '300italic';
+}
+
+#line-track{
+     width: 200px;
+     height: 3px;
+     background: white;
+}
+
+#line-artist{
+    width: 200px;
+    height: 1px;
+    background: #bbc1ba;
+}
+
+
+
+canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: -1;
+}
+
