--- a/includes/index.css
+++ b/includes/index.css
@@ -8,13 +8,34 @@
 
 @import "http://fonts.googleapis.com/css?family=Lato";
 
+
+
 body {
     width: 100%;
-    margin: 0 auto;
     font-family: 'Lato', sans-serif;
-    background: #0B0B0A;
-    color: whitesmoke;
+    color: rgb(253, 255, 252);
     line-height: 1.3;
+    background-size: 100% 100%;
+    overflow: hidden;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+}
+
+#bgrnd {
+    position: fixed;
+    top: -40px;
+    bottom: -40px;
+    right: -40px;
+    left: -40px;
+    background-size: cover;
+    background-position: center;
+    z-index: -3;
+
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
+    -ms-filter: blur(10px);
+    filter: blur(10px);
 }
 
 .audiojs {
