--- a/includes/index.css
+++ b/includes/index.css
@@ -185,3 +185,92 @@ canvas {
     z-index: -1;
 }
 
+
+
+
+
+
+
+
+
+
+p {
+    background-color: #404040;
+    clear: both;
+}
+
+.audiojs {
+    position: fixed;
+    z-index: 1031;
+    bottom: 0px;
+    left: 0;
+    overflow: hidden;
+    width: 104%;
+    height: 40px;
+    background: #4448BD;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #444), color-stop(0.5, #555), color-stop(0.51, #444), color-stop(1, #444));
+    background-image: -moz-linear-gradient(center top, #444 0%, #555 50%, #444 51%, #444 100%);
+    -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+    -o-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+}
+
+.audiojs .play-pause {
+    background: #4448BD;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #444), color-stop(0.5, #555), color-stop(0.51, #444), color-stop(1, #444));
+    background-image: -moz-linear-gradient(center top, #444 0%, #555 50%, #444 51%, #444 100%);
+    width: 2%;
+    height: 40px;
+    padding: 10px 0px 25px 3px;
+}
+
+.audiojs p {
+    background-color: #4448BD;
+    width: 40px;
+    height: 40px;
+    margin: -3px 0px 0px -1px;
+}
+
+.audiojs .scrubber {
+    background: #4d4444;
+    width: 95%;
+    height: 40px;
+    top: -5px;
+    left: -5px;
+    margin: 5px;
+}
+
+.audiojs .progress {
+    height: 40px;
+    width: 0px;
+    background: #ccc;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ccc), color-stop(0.5, #ddd), color-stop(0.51, #ccc), color-stop(1, #ccc));
+    background-image: -moz-linear-gradient(center top, #ccc 0%, #ddd 50%, #ccc 51%, #ccc 100%);
+}
+
+.audiojs .loaded {
+    height: 50%;
+    opacity: 0.1;
+    width: 0px;
+    background: #000;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #222), color-stop(0.5, #333), color-stop(0.51, #222), color-stop(1, #222));
+    background-image: -moz-linear-gradient(center top, #222 0%, #333 50%, #222 51%, #222 100%);
+}
+
+.audiojs .time {
+    background: #4448BD;
+    background-color: #4448BD;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #444), color-stop(0.5, #555), color-stop(0.51, #444), color-stop(1, #444));
+    background-image: -moz-linear-gradient(center top, #444 0%, #555 50%, #444 51%, #444 100%);
+    height: 40px;
+    width: 0px;
+    margin: 1000px;
+    line-height: 25px;
+}
+
+.audiojs .error-message {
+    height: 24px;
+    line-height: 24px;
+}
+
